# VersionWise

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENCE  README.md  pyproject.toml
.changesets/: ai_integration.toml  consequatur.toml  first_changeset.md  first_changeset.toml  last_changeset_test.md  last_changeset_test.toml  minus.toml  perferendis.md  perferendis.toml  second_changeset.md  second_changeset.toml
.github/: CODEOWNERS  pull_request_template.md
.github/utilities/: open_pr.py
.github/workflows/: bump_version.yml  open_pull_request.yml  publish_on_release.yml  rust-ci.yml
docs/: CODE_OF_CONDUCT.md
src/: main.rs
src/options/: bump.rs  changeset.rs  create.rs  list.rs  mod.rs
src/utilities/: ai_message_generator.rs  changelog_utils.rs  changeset_structures.rs  changesets_utilities.rs  mod.rs  sets_utils.rs  subcommands.rs  version_operations.rs
src/utilities/ai_calls/: gemini.rs  mod.rs  openai.rs
