[package]
name = "versionwise"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = { version = "2.9.2", features = ["derive"] }
clap = "^2.0.0"
pyo3 = "0.20.3"
regex = "1.10.3"
requestty = "0.5.0"
colored = "2.1.0"
toml = "0.8.11"
serde = { version = ">=1.0", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["json"] }
dotenv = "0.15.0"
serde_json = "1.0.114"
tokio = { version = "1.36", features = ["full"] }

[dev-dependencies]
tempfile = "3.10.1"
