[tool.poetry]
name = "versionwise"
description = "Tool for teams to manage the CHANGELOG given a list of different changes."
authors = ["ricardoleal20 <rick.leal420@gmail.com>"]
license = "MIT License"
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.7"
maturin = ">=1.5.1"

[tool.versionwise]
# Test file to ensure that you can find the version path to use
version_path = ["pyproject.toml", "Cargo.toml"]

[build-system]
requires = ["maturin>=1.5.1; python_version<'3.11'", "setuptools-rust>=1.4.0"]
build-backend = "maturin"

[project]
name = "versionwise"
requires-python = ">=3.8"
classifiers = [
    "Topic :: Software Management :: Management Tools",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["maturin>=1.5.1 ; python_version>'3.8'"]
dynamic = ["authors", "description", "license", "readme", "version"]
